fix: stabilize ThingWorx widgets and repository workflows